# redimnet-mrl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CROSS_MODEL_DISTILLATION_ANALYSIS.md  DATA_REQUIREMENTS.md  GET_STARTED.md  GPU_REQUIREMENTS.md  LICENSE  LORA_SURVEY.md  MIGRATION_NOTES.md  README.md  SUMMARY.md  TORCHCODEC_WINDOWS_SETUP.md  __init__.py  compare_checkpoints.py  config.yaml  config_5060ti.yaml  dataset.py  evaluate.py  example_pretrained.py  losses.py  model.py  pretrained.py  pyproject.toml  quick_start.sh  requirements.txt  setup.py  test_checkpoint.py  train.py
.github/: README.md
diarization/: INPUT_USAGE.md  README.md  __init__.py  checkpoint_utils.py  compare_clustering_methods.py  compare_dimensions.py  diar_config.yaml  diar_config_tuned_accuracy.yaml  diar_config_tuned_balanced.yaml  diar_config_tuned_speaker_count.yaml  diar_config_tuned_speed.yaml  generate_visualization.py  hierarchical_mrl_clustering.py  main.py  optuna_tuning.py  redimnet_wrapper.py  test_diarization.py  test_param_detection.py  test_vad_config.py
diarization/docs/: CONFIG_USAGE.md  IMPLEMENTATION_PLAN.md  VAD_CONFIGURATION.md
diarization/docs/plan/: 2025-12-15_OPTIMIZATION_PLAN.md
diarization/scripts/: check_pipeline_attrs.py  inspect_pipeline.py  test_debug_embeddings.py
docs/: DATA_REQUIREMENTS.md  GET_STARTED.md  INSTALLATION.md  PRETRAINED_GUIDE.md  SUMMARY.md
docs/report/: 2025-12-03_TEST_RESULTS.md  2025-12-03_TRAINING_REPORT.md  2025-12-13_CHECKPOINT_COMPARISON_REAL_AUDIO.md  EER_VALIDATION_RESULTS.md  ROOT_CAUSE_ANALYSIS.md
(+4 files in other folders)
